# python-base

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Makefile  README.md  logging.prod.yaml  logging.test.yaml  logging.yaml  pyproject.toml
.github/actions/setup-project/: action.yaml
.github/workflows/: application.yaml
conf/: logging.empty.yaml  logging.prod.yaml
src/api/: main.py  settings.py
src/app/: main.py  settings.py
src/config/logs/: init_logs.py
src/config/settings/: __init__.py  get_settings.py  settings.py
src/core/: foo.py
src/core/logs/: logs_settings.py
src/core/settings/: app_base_settings.py
src/lib_core/logs/: __init__.py  init_logs.py  logs_settings.py  setup_logs.py  task_logger.py
src/lib_core/logs/task_logger/: __init__.py  task_logger.py  task_logger_logging.py  types.py
src/lib_core/settings/: __init__.py  app_base_settings.py  env_settings.py
tests/app/: conftest.py  test_main.py
tests/core/: test_foo.py
