[project]
name = "python-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
api = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.2",
]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "rich>=14.0.0",
    "ruff>=0.11.8",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
app = "app.main:main"

[tool.uv]
default-groups = ["api"]

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
preview = true
extend-select = ["I", "PERF", "E", "W", "PD", "NPY", "S", "FBT", "A", "COM", "DTZ", "ISC", "LOG", "G", "PIE", "T20", "PT", "RET", "SIM", "TID", "PTH", "UP", "DOC"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"src".msg = "Do not use src imports. Imports are relative to the src directory and should not include the 'src.' prefix."

[tool.pyright]
include = ["src/**/*.py"]
exclude = ["tests"]
typeCheckingMode = "strict"
reportMissingParameterType = true
reportMissingTypeArgument = true
reportMissingTypeAnnotation = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-fail-under=60"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
